--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -159,6 +159,11 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 p {
   margin-top: 0; }
   
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 
 /* Links
